--- a/index.html
+++ b/index.html
@@ -3,14 +3,29 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="img/favicon-32x32.png">
+
     <title>BeanVibe - Fresh Coffee Everyday</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Best coffee near me,coffee bar" name="keywords">
+    <meta content="Community Sips: Engaging with Local Events and Causes" name="description">
+    <meta content="index,follow" name="robots">
+    <meta property="og:title" content="BeanVibe - Fresh Coffee Everyday">
+    <meta property="og:description" content="Community Sips: Engaging with Local Events and Causes">
+    <meta property="og:url" content="https://ronitaa0813.github.io/coffees/ ">
+    <meta property="og:image" content="img/favicon-32x32.png">
+
+    <meta property="twitter:title" content="BeanVibe - Fresh Coffee Everyday">
+    <meta property="twitter:description" content="Community Sips: Engaging with Local Events and Causes">
+    <meta property="twitter:url" content="https://ronitaa0813.github.io/coffees/ ">
+    <meta property="twitter:image" content="img/favicon-32x32.png">
+
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
+    <link rel="canonical" href="https://ronitaa0813.github.io/coffees/ ">
+    
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
@@ -98,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-4 py-0 py-lg-5">
                     <h1 class="mb-3">Our Vision</h1>
-                    <h5 class="mb-3"> </h5>
+                    <h5 class="mb-3">mnj </h5>
                     <p>Takimata sed vero vero no sit sed, justo clita duo no duo amet et, nonumy kasd sed dolor eos diam lorem eirmod. Amet sit amet amet no. Est nonumy sed labore eirmod sit magna. Erat at est justo sit ut. Labor diam sed ipsum et eirmod</p>
                     <a href="" class="btn btn-secondary font-weight-bold py-2 px-4 mt-2">Learn More</a>
                 </div>
